--- a/FCT/Angular_FCT/Reservas/reservas/src/app/pages/inicio/inicio.component.html
+++ b/FCT/Angular_FCT/Reservas/reservas/src/app/pages/inicio/inicio.component.html
@@ -1,23 +1,36 @@
 <div class="container">
   <img src="/assets/imagenes/logo.jpg" alt="" style="width: 200px" />
+
   <div class="containerImage">
     <div>
-      <img src="/assets/imagenes/logo.jpg" alt=""  />
+      <img src="/assets/imagenes/foto1.jpg" alt=""  />
     </div>
     <div>
-      <img src="/assets/imagenes/logo.jpg" alt=""  />
+      <img src="/assets/imagenes/foto2.jpg" alt=""  />
+    </div>             
+    <div>
+      <img src="/assets/imagenes/foto3.jpg" alt=""  />
     </div>
     <div>
-      <img src="/assets/imagenes/logo.jpg" alt=""  />
-    </div>
-    <div>
-        <img src="/assets/imagenes/logo.jpg" alt=""  />
+        <img src="/assets/imagenes/foto4.jpg" alt=""  />
       </div>
       <div>
-        <img src="/assets/imagenes/logo.jpg" alt=""  />
+        <img src="/assets/imagenes/foto5.jpg" alt=""  />
       </div>
       <div>
-        <img src="/assets/imagenes/logo.jpg" alt=""  />
+        <img src="/assets/imagenes/foto6.jpg" alt=""  />
       </div>
+      <div>
+        <img src="/assets/imagenes/foto7.jpg" alt=""  />
+      </div>
+      <div>
+        <img src="/assets/imagenes/foto8.jpg" alt=""  />
+      </div>
+      <div>
+        <img src="/assets/imagenes/foto9.jpg" alt=""  />
+      </div>
+    
   </div>
+
+  
 </div>
