--- a/FCT/Angular_FCT/Reservas/reservas/src/app/pages/contacto/contacto.component.html
+++ b/FCT/Angular_FCT/Reservas/reservas/src/app/pages/contacto/contacto.component.html
@@ -1,1 +1,74 @@
-<p>contacto works!</p>
+<p-toast></p-toast>
+<div class="flex justify-content-center alig-items-center w-full h-full">
+  <div class="card grid">
+    <h2 class="col-12 flex justify-content-center alig-items-center">
+      Contacto
+    </h2>
+    <form class="col-12 grid" [formGroup]="contactoFormulario">
+      <div
+        class="field col-12 md:col-6 flex justify-content-center alig-items-center"
+      >
+        <span class="p-float-label mt-3 w-full">
+          <input
+            class="w-full"
+            pInputText
+            formControlName="nombre"
+            id="nombre"
+            [ngClass]="{ 'ng-invalid ng-dirty': isValidField('nombre') }"
+          />
+          <label htmlFor="nombre">Nombre:</label>
+        </span>
+      </div>
+      <div
+        class="field col-12 md:col-6 flex justify-content-center alig-items-center"
+      >
+        <span class="p-float-label mt-3 w-full">
+          <input
+            class="w-full"
+            pInputText
+            id="email"
+            formControlName="correo"
+            [ngClass]="{ 'ng-invalid ng-dirty': isValidField('correo') }"
+          />
+          <label htmlFor="email">Email:</label>
+        </span>
+      </div>
+      <div class="field col-12">
+        <span class="p-float-label">
+          <textarea
+            class="w-full"
+            id="asunto"
+            rows="5"
+            formControlName="asunto"
+            [ngClass]="{ 'ng-invalid ng-dirty': isValidField('asunto') }"
+            pInputTextarea
+          ></textarea>
+          <label for="asunto">Asunto:</label>
+        </span>
+      </div>
+
+      <div class="field col-12">
+        <span class="p-float-label">
+          <textarea
+            class="w-full"
+            id="mensaje"
+            rows="5"
+            formControlName="mensaje"
+            [ngClass]="{ 'ng-invalid ng-dirty': isValidField('mensaje') }"
+            pInputTextarea
+          ></textarea>
+          <label for="mensaje">Mensaje:</label>
+        </span>
+      </div>
+      <div class="field col-12">
+        <button
+          pButton
+          pRipple
+          label="Enviar"
+          class="p-button-success w-full"
+          (click)="onSubmit()"
+        ></button>
+      </div>
+    </form>
+  </div>
+</div>
