--- a/FCT/Angular_FCT/Reservas/reservas/src/app/pages/inicio/inicio.component.css
+++ b/FCT/Angular_FCT/Reservas/reservas/src/app/pages/inicio/inicio.component.css
@@ -10,23 +10,28 @@
 .containerImage {
   display: flex;
   width: 50%;
+  height: fit-content;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  gap: 20px;
+  gap: 10px;
 }
 
 .containerImage div{
-    width: 20%;
+    width: 30%;
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid black;
-    border-radius: 5px;
-background-color: bisque;
+    border: 1px solid rgba(0, 0, 0, 0);
+    border-radius: 10px;
+background-color: rgba(150, 149, 147, 0.616);
 }
 .containerImage div img{
-    width: 100px;
+    width: 220px;
+    height: 200px;
     padding: 20px;
+    border-radius: 20px;
+    -moz-border-radius: 20px;
+    -webkit-border-radius: 20px;
 }
