--- a/FCT/Angular_FCT/Reservas/reservas/src/app/shared/header/header.component.css
+++ b/FCT/Angular_FCT/Reservas/reservas/src/app/shared/header/header.component.css
@@ -21,12 +21,21 @@
     align-items: center;
     flex-direction: row;
     gap: 10px;
+    
 }
 
-.menuContainer a :hover{
-    cursor: pointer;
-}
+
 .menuContainer a{
+    display: flex;
     text-decoration: none;
     color: aliceblue;
+    font-size: large;
+    margin-left: 40px;
+    padding: auto;
+    
+}
+.menuContainer a:hover{
+    cursor: pointer;
+
+ 
 }
