--- a/FCT/Angular_FCT/Reservas/reservas/src/app/shared/header/header.component.html
+++ b/FCT/Angular_FCT/Reservas/reservas/src/app/shared/header/header.component.html
@@ -4,5 +4,6 @@
     <a routerLink="/">Inicio</a>
     <a routerLink="./reserva">Reservas</a>
     <a routerLink="./contacto">Contacto</a>
+    <a routerLink="./comentarios">Comentarios</a>
   </div>
 </div>
