--- a/FCT/Angular_FCT/Reservas/reservas/src/styles.css
+++ b/FCT/Angular_FCT/Reservas/reservas/src/styles.css
@@ -1,6 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 *{
+  
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+body{
     padding: 0;
     margin: 0;
-    overflow-x: hidden;
 }
