--- a/FCT/Angular_FCT/Reservas/reservas/src/app/pages/contacto/contacto.component.css
+++ b/FCT/Angular_FCT/Reservas/reservas/src/app/pages/contacto/contacto.component.css
@@ -1,7 +1,35 @@
+.background {
+    background-image: url('/assets/imagenes/paisaje2.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    flex-wrap: wrap;
+    height: 100%;
+  }
 .card{
-    -webkit-box-shadow: -4px 7px 5px 1px rgba(0,0,0,0.41);
+-webkit-box-shadow: -4px 7px 5px 1px rgba(0,0,0,0.41);
 -moz-box-shadow: -4px 7px 5px 1px rgba(0,0,0,0.41);
 box-shadow: -4px 7px 5px 1px rgba(0,0,0,0.41);
 border-radius: 5px;
 margin-top: 20px;
+width: 40%;
+background-color: rgba(247, 245, 243, 0.76);
+}
+
+.card .p-inputtext{
+   background-color: rgba(228, 228, 228, 0.747);
+}
+.p-button{
+    background-color: rgb(107, 194, 206);
+    border: 1px solid #6cbed3;
+}
+
+
+.grid{
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -0.5rem;
+    margin-left: -0.5rem;
+    margin-top: 40px;
+  
 }
