--- a/FCT/Angular_FCT/Reservas/reservas/src/app/pages/contacto/contacto.component.html
+++ b/FCT/Angular_FCT/Reservas/reservas/src/app/pages/contacto/contacto.component.html
@@ -1,5 +1,5 @@
 <p-toast></p-toast>
-<div class="flex justify-content-center alig-items-center w-full h-full">
+<div class="background flex justify-content-center align-items-center w-full h-full">
   <div class="card grid">
     <h2 class="col-12 flex justify-content-center alig-items-center">
       Contacto
