--- a/FCT/Angular_FCT/Reservas/reservas/src/app/pages/reservas/reservas.component.css
+++ b/FCT/Angular_FCT/Reservas/reservas/src/app/pages/reservas/reservas.component.css
@@ -1,3 +1,11 @@
+.background {
+  background-image: url("/assets/imagenes/paisajerural.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  flex-wrap: wrap;
+  height: 100vh;
+}
 .container {
     display: flex;
     width: 100%;
