--- a/FCT/Angular_FCT/Reservas/reservas/src/app/shared/header/header.component.html
+++ b/FCT/Angular_FCT/Reservas/reservas/src/app/shared/header/header.component.html
@@ -1,9 +1,16 @@
 <div class="headerContainer">
-  <img src="/assets/imagenes/logo.jpg" alt="reservas" />
+  <div>
+
+    <img class="imgLogo" src="/assets/imagenes/logodosmil.png" alt="reservas" />
+  </div>
   <div class="menuContainer">
     <a routerLink="/">Inicio</a>
     <a routerLink="./reserva">Reservas</a>
     <a routerLink="./contacto">Contacto</a>
     <a routerLink="./comentarios">Comentarios</a>
+  </div>
+  <div class="imgLoginDiv">
+
+    <img class="imgLogin" src="/assets/imagenes/logoIcono.png" alt="logotipo" routerLink="/login">
   </div>
 </div>
