--- a/FCT/Angular_FCT/Reservas/reservas/src/app/pages/inicio/inicio.component.html
+++ b/FCT/Angular_FCT/Reservas/reservas/src/app/pages/inicio/inicio.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="overflow-y: auto;">
   <img src="/assets/imagenes/logo.jpg" alt="" style="width: 200px" />
 
   <div class="containerImage">
