--- a/FCT/Angular_FCT/Reservas/reservas/src/app/shared/header/header.component.css
+++ b/FCT/Angular_FCT/Reservas/reservas/src/app/shared/header/header.component.css
@@ -1,6 +1,6 @@
 .headerContainer{
     display: flex;
-    justify-content: start;
+    justify-content: space-between;
     align-items: center;
     background-color: #545353;
     width: 100%;
@@ -8,14 +8,30 @@
     height: 90px;
     color: aliceblue;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+ 
 }
 
 .headerContainer img{
     width: 70px;
-    margin-right: 20px;
     border-radius: 40px;
+   
+}
+.headerContainer .imgLogo{
+    margin-right: 20px;
+    
 }
 
+.headerContainer .imgLogin{
+
+    width: 40px;
+  
+
+
+}
+
+.imgLoginDiv :hover{
+    cursor: pointer;
+}
 .menuContainer{
     display: flex;
     justify-content: center;
@@ -29,6 +45,7 @@
 .menuContainer a{
     display: flex;
     text-decoration: none;
+    justify-content: left;
     color: aliceblue;
     font-size: large;
     margin-left: 40px;
