--- a/FCT/Angular_FCT/Reservas/reservas/src/styles.css
+++ b/FCT/Angular_FCT/Reservas/reservas/src/styles.css
@@ -2,9 +2,10 @@
 *{
   
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  
+    
 }
 body{
     padding: 0;
     margin: 0;
+    overflow-y: hidden;
 }
