--- a/FCT/Angular_FCT/Reservas/reservas/src/app/pages/reservas/reservas.component.css
+++ b/FCT/Angular_FCT/Reservas/reservas/src/app/pages/reservas/reservas.component.css
@@ -11,27 +11,47 @@
     width: 100%;
     height: 90vh;
     flex-direction: column;
-    justify-content: center;
+    margin: 20px;
     align-items: center;
   }
   
   .containerSearchBar {
     display: flex;
-    width: 50%;
+    align-items: stretch;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
+    max-height: 50px;
+    margin: 20px;
     gap: 20px;
   }
   
-  .containerSearchBar div{
-      width: 20%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      border: 1px solid black;
-      border-radius: 5px;
-  background-color: bisque;
+
+  .custom-card {
+    flex: 1;
+    max-height: 50%;
   }
-  
+  .p-button {
+    margin: 20px;
+    width: 150px !important; 
+    display: inline-flex;
+    cursor: pointer;
+    -webkit-user-select: none;
+    user-select: none;
+    align-items: center;
+    vertical-align: bottom;
+    text-align: center;
+    overflow: hidden;
+    position: relative;
+
+}
+.total-value {
+  color: rgb(248, 244, 244);
+}
+.containerSearchBar .p-card {
+  background-color: rgb(255, 228, 196); /* Estilo de fondo de la card */
+  border: 1px solid black; /* Estilo del borde de la card */
+  border-radius: 5px; /* Estilo de borde redondeado de la card */
+  align-items: center;
+
+}
