--- a/FCT/Angular_FCT/Reservas/reservas/src/app/auth/login/login.component.html
+++ b/FCT/Angular_FCT/Reservas/reservas/src/app/auth/login/login.component.html
@@ -5,7 +5,7 @@
   
   <div class="card grid cardContainer">
     <h2 class="col-12 flex justify-content-center alig-items-center">
-      Contacto
+      Login
     </h2>
     <form class="col-12 grid" [formGroup]="fomrLogin" style="margin: auto;">
       <div
