--- a/FCT/Angular_FCT/Reservas/reservas/src/app/pages/comentarios/comentarios.component.html
+++ b/FCT/Angular_FCT/Reservas/reservas/src/app/pages/comentarios/comentarios.component.html
@@ -1,3 +1,6 @@
+<p-toast></p-toast>
+<div class="background"  >
+<div class="flex justify-content-center align-items-center w-full ">
 <div class="container">
     <div class="card">
       <h3>Valoración de la Casa</h3>
@@ -14,12 +17,13 @@
       </form>
     </div>
   
-    <div class="comment-list">
-      <h3>Lista de Comentarios</h3>
+    <div class="comment-list" #commentList>
+      <h3>Reseñas</h3>
       <div class="card" *ngFor="let comentario of comentarios">
         <p>Fecha de Publicación: {{ comentario.fecha_publicacion | date }}</p>
         <p>Comentario: {{ comentario.texto }}</p>
       </div>
     </div>
   </div>
-  
+</div> 
+</div>
