--- a/FCT/Angular_FCT/Reservas/reservas/src/app/pages/reservas/reservas.component.css
+++ b/FCT/Angular_FCT/Reservas/reservas/src/app/pages/reservas/reservas.component.css
@@ -55,3 +55,38 @@
   align-items: center;
 
 }
+.custom-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+  padding: 10px;
+  margin: 10px;
+}
+.p-inputnumber-input {
+  flex: 1 1 auto;
+  margin-left: 20px;
+  padding-left: 10px;
+}
+.input-button-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-top: 10px;
+  margin-left: 10px;
+  background-color: rgba(255, 228, 196, 0.13)
+}
+
+.red-button {
+  background-color: red;
+  color: white;
+  padding: 12px 24px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+  margin-left: 10px;
+}
+.custom-card h3 {
+  color: rgb(249, 249, 252); 
+}
