--- a/FCT/Angular_FCT/Reservas/reservas/src/app/pages/reservas/reservas.component.css
+++ b/FCT/Angular_FCT/Reservas/reservas/src/app/pages/reservas/reservas.component.css
@@ -6,55 +6,27 @@
   flex-wrap: wrap;
   height: 100vh;
 }
+
 .container {
-    display: flex;
-    width: 100%;
-    height: 90vh;
-    flex-direction: column;
-    margin: 20px;
-    align-items: center;
-  }
- 
-  .containerSearchBar {
-    display: flex;
-    align-items: stretch;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    max-height: 50px;
-    margin: 20px;
-    gap: 20px;
-  }
-  
-
-  .custom-card {
-    flex: 1;
-    max-height: 50%;
-  }
-  .p-button {
-    margin: 20px;
-    width: 150px !important; 
-    display: inline-flex;
-    cursor: pointer;
-    -webkit-user-select: none;
-    user-select: none;
-    align-items: center;
-    vertical-align: bottom;
-    text-align: center;
-    overflow: hidden;
-    position: relative;
-
-}
-.total-value {
-  color: rgb(248, 244, 244);
-}
-.containerSearchBar .p-card {
-  background-color: rgb(255, 228, 196); /* Estilo de fondo de la card */
-  border: 1px solid black; /* Estilo del borde de la card */
-  border-radius: 5px; /* Estilo de borde redondeado de la card */
+  display: flex;
+  width: 100%;
+  height: 90vh;
+  flex-direction: column;
+  margin: 20px;
   align-items: center;
-
 }
+
+.containerSearchBar {
+  display: flex;
+  align-items: stretch;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  max-height: 50px;
+  margin: 20px;
+  gap: 20px;
+}
+
 .custom-card {
   display: flex;
   flex-direction: column;
@@ -63,18 +35,48 @@
   padding: 10px;
   margin: 10px;
 }
-.p-inputnumber-input {
-  flex: 1 1 auto;
-  margin-left: 20px;
-  padding-left: 10px;
+
+.p-button {
+  margin: 10px; /* Ajustar el margen a 10px */
+  width: 150px !important; 
+  display: inline-flex;
+  cursor: pointer;
+  -webkit-user-select: none;
+  user-select: none;
+  align-items: center;
+  vertical-align: bottom;
+  text-align: center;
+  overflow: hidden;
+  position: relative;
+  margin-top: 10px; /* Ajustar el margen superior a 10px */
 }
+
+.total-value {
+  color: rgb(248, 244, 244);
+}
+
+.containerSearchBar .p-card {
+  background-color: rgb(255, 228, 196);
+  border: 1px solid black;
+  border-radius: 5px;
+  align-items: center;
+}
+
+.p-inputnumber {
+  flex: 1 1 auto;
+  margin-left: 10px; /* Ajustar el margen izquierdo a 10px */
+  padding-left: 10px;
+  font-size: 14px; /* Ajustar el tamaño de fuente a 14px */
+  width: 120px; /* Ajustar el ancho a 120px */
+}
+
 .input-button-container {
   display: flex;
   flex-direction: row;
   align-items: center;
   margin-top: 10px;
   margin-left: 10px;
-  background-color: rgba(255, 228, 196, 0.13)
+  background-color: rgba(255, 228, 196, 0.13);
 }
 
 .red-button {
@@ -87,6 +89,10 @@
   font-size: 16px;
   margin-left: 10px;
 }
+
 .custom-card h3 {
-  color: rgb(249, 249, 252); 
+  color: rgb(249, 249, 252);
+}
+.placeholder-text {
+  color: #999;
 }
