--- a/FCT/Angular_FCT/Reservas/reservas/src/app/pages/reservas/reservas.component.html
+++ b/FCT/Angular_FCT/Reservas/reservas/src/app/pages/reservas/reservas.component.html
@@ -1,4 +1,3 @@
-
 <p-toast></p-toast>
 <div class="background flex justify-content-center align-items-center w-full">
   <div class="container">
@@ -7,16 +6,14 @@
       <p-calendar [(ngModel)]="reserva.date" selectionMode="range" [readonlyInput]="true" (onSelect)="onDateSelect($event)" [minDate]="minDate"></p-calendar>
       <p-dropdown [(ngModel)]="reserva.numero_personas" [options]="options" optionLabel="value"></p-dropdown>
       <p-inputNumber [ngModel]="reserva.total" mode="currency" currency="EUR"></p-inputNumber>
+      <button pButton pRipple label="Enviar" class="send-button" (click)="reservar()"></button>
     </div>
     <div class="custom-card">
-      <h3>Elimina tu Reserva</h3>
+      <h3>Cancela tu reserva</h3>
       <div class="input-button-container">
-        <p-inputNumber input type="number" id="idReserva" name="idReserva" #idReservaInput></p-inputNumber>
-        <button pButton pRipple label="Eliminar" class="red-button" (click)="borrarReserva(idReservaInput.value)"></button>
+        <p-inputNumber input type="number" id="idReserva" name="idReserva" (focus)="clearPlaceholder()" #idReservaInput></p-inputNumber>
+        <button pButton pRipple label="Eliminar" class="red-button" (click)="borrarReserva(idReservaInput.value)" #idReservaInput></button>
       </div>
     </div>
-    <button pButton pRipple label="Enviar" class="w-full" (click)="reservar()"></button>
   </div>
 </div>
-
-<p-toast></p-toast>
