--- a/FCT/Angular_FCT/Reservas/reservas/src/app/auth/login/login.component.css
+++ b/FCT/Angular_FCT/Reservas/reservas/src/app/auth/login/login.component.css
@@ -7,7 +7,7 @@
     height: 100vh;
   }
   .cardContainer {
-    -webkit-box-shadow: -4px 7px 5px 1px rgba(0, 0, 0, 0.41);
+    -webkit-box-shadow: -4px 7px 5px 1px rgba(0, 0, 0, 0.41); /*SOMBRAS*/
     -moz-box-shadow: -4px 7px 5px 1px rgba(0, 0, 0, 0.41);
     box-shadow: -4px 7px 5px 1px rgba(0, 0, 0, 0.41);
     border-radius: 5px;
@@ -15,7 +15,7 @@
     width: 30%;
     background-color: rgba(209, 208, 207, 0.849);
   }
-  
+
   .card .p-inputtext {
     background-color: rgba(228, 228, 228, 0.747);
   }
@@ -23,4 +23,3 @@
     background-color: rgb(107, 194, 206);
     border: 1px solid #6cbed3;
   }
-  
